# budgie-haste-applet

./: .gitignore  LINGUAS  Makefile.am  README.md  common.mk  configure.ac  meson.build
.tx/: config
budgie-haste-applet/: AutomaticScrollBox.c  AutomaticScrollBox.vala  HasteApplet.c  HasteApplet.plugin  HasteApplet.vala  HistoryView.c  HistoryView.vala  HistoryViewItem.c  HistoryViewItem.vala  Makefile.am  NewHasteView.c  NewHasteView.vala
data/: HasteApplet.plugin  Makefile.am  budgie-haste-applet.appdata.xml  com.github.cybre.budgie-haste-applet.appdata.xml  com.github.cybre.budgie-haste-applet.gresource.xml  com.github.cybre.budgie-haste-applet.gschema.xml  com.github.cybre.haste-applet.gschema.xml  meson.build  plugin.gresource.xml  settings.ui  settings.ui~  style.css
data/style/: style.css
data/ui/: editor_view.ui  history_item.ui  history_placeholder.ui  history_view.ui  settings_view.ui
haste-applet/: AutomaticScrollBox.vala  HasteApplet.vala  HistoryView.vala  HistoryViewItem.vala  Makefile.am  NewHasteView.vala  apps.haste-applet.settings.gschema.xml  com.github.cybre.haste-applet.gschema.xml  plugin.gresource.xml  settings.ui
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  budgie-haste-applet.pot  ca.po  da.po  de.po  id_ID.po  lt.po  meson.build  nl_BE.po  nl_NL.po  sr_RS.po  sr_RS@latin.po
src/: HasteApplet.vala  meson.build
src/Backend/: BackendUtil.vala  SettingsManager.vala  Uploader.vala
src/Backend/Providers/: GPaste.vala  GitHubGist.vala  Hastebin.vala  IProvider.vala  Pastebin.vala
src/Views/: EditorView.vala  HistoryView.vala  SettingsView.vala
src/Widgets/: AutomaticScrollBox.vala  HistoryItem.vala  IndicatorWindow.vala  MainStack.vala
